force-app/main/default/objects/TeacherClassSubject__c/TeacherClassSubject__c.object-meta.xml
<CustomObject>
    <label>TeacherClassSubject</label>
    <nameField>
        <label>TeacherClassSubject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeacherClassSubjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>