force-app/main/default/objects/TeacherClassSubject__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>TeacherClassSubjects</relationshipLabel>
    <relationshipName>TeacherClassSubjects</relationshipName>
    <type>Lookup</type>
</CustomField>