force-app/main/default/objects/TeacherClassSubject__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>TeacherClassSubjects</relationshipLabel>
    <relationshipName>TeacherClassSubjects</relationshipName>
    <type>Lookup</type>
</CustomField>